--- a/gos_frontend/styles/LandingPage.css
+++ b/gos_frontend/styles/LandingPage.css
@@ -58,6 +58,7 @@
 
 @media (max-width: 1024px) {
   .heroContainer {
+    margin-top: 6rem;
     padding: 3rem 4rem;
     gap: 2rem;
   }
@@ -94,12 +95,12 @@
   }
 
   .heroTitle {
-    font-size: 2.4rem;
+    font-size: 2.5rem;
     line-height: 1.2;
   }
 
   .heroTagline {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-bottom: 0.5rem;
   }
 
