--- a/gos_frontend/styles/Register.css
+++ b/gos_frontend/styles/Register.css
@@ -82,9 +82,10 @@
   
 @media (max-width: 1024px) {
   .registerContainer {
-    flex-direction: column;
+    margin-top: 5rem;
     padding: 3rem 4rem;
     gap: 3rem;
+    
   }
 
   .registerLeft,
@@ -101,10 +102,41 @@
   }
 }
 
+@media (max-width: 900px) {
+  .registerContainer {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .registerLeft,
+  .registerRight {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .registerImage {
+    max-width: 250px;
+    height: auto;
+  }
+
+  .registerForm input {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .registerForm {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
+
+
 @media (max-width: 768px) {
   .registerContainer {
     padding: 2rem;
-    gap: 2rem;
+    gap: 2rem; 
   }
 
   .registerLeft {
