--- a/gos_frontend/styles/Profile.css
+++ b/gos_frontend/styles/Profile.css
@@ -132,6 +132,37 @@
     text-decoration: none;
     text-align: left; 
   }
+
+  .saveButton, .changeButton {
+    margin-left: 1rem;
+    background: linear-gradient(to right, #6366f1, #7c3aed);
+    color: white;
+    border: none;
+    padding: 0.5rem 1.2rem;
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  
+  .saveButton:hover, .changeButton:hover {
+    background: #4f46e5;
+  }
+
+  .deleteButton {
+    background: #17161C;
+    color: white;
+    padding: 0.5rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  .inputBar {
+    background-color: white;
+    padding: 0.5rem 1.2rem;
+    border-radius: 10px;
+  }
   
   @media (max-width: 1024px) {
     .profileContainer {
