--- a/gos_frontend/styles/Profile.css
+++ b/gos_frontend/styles/Profile.css
@@ -160,9 +160,19 @@
 
   .inputBar {
     background-color: white;
+    color: black;
     padding: 0.5rem 1.2rem;
     border-radius: 10px;
   }
+
+  .return.positive {
+    color: #4ade80;
+  }
+  
+  .return.negative {
+    color: #f87171;
+  }
+  
   
   @media (max-width: 1024px) {
     .profileContainer {
