--- a/gos_frontend/styles/Profile.css
+++ b/gos_frontend/styles/Profile.css
@@ -130,7 +130,8 @@
     display: inline-block;
     margin-top: 0.5rem;
     text-decoration: none;
-    text-align: left; 
+    text-align: left;
+    cursor: pointer; 
   }
 
   .saveButton, .changeButton {
@@ -163,6 +164,7 @@
     color: black;
     padding: 0.5rem 1.2rem;
     border-radius: 10px;
+    outline: none;
   }
 
   .return.positive {
