--- a/gos_frontend/styles/StockPage.css
+++ b/gos_frontend/styles/StockPage.css
@@ -6,7 +6,8 @@
   color: white;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* Main content wrapper */
@@ -18,6 +19,7 @@
   width: 100%;
   align-items: center;
   max-width: 950px;
+  box-sizing: border-box;
 }
 
 /* Page title */
@@ -46,6 +48,7 @@
   width: 100%;
   max-width: 40rem;
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 .searchBar input {
