--- a/gos_frontend/styles/Modal.css
+++ b/gos_frontend/styles/Modal.css
@@ -105,6 +105,10 @@
   color: white;
 }
 
+.confirmBuyButton:hover {
+  background: linear-gradient(to bottom, #6F95FA, #5fd3ff); ;
+}
+
 .bsCancelButton {
   padding: 0.6rem 1.25rem;
   border: 1px solid white;
@@ -114,6 +118,10 @@
   font-size: 1rem;
   width: 180px;
   color: white;
+}
+
+.bsCancelButton:hover {
+  background-color: #252525;
 }
 
 .totalContainer {
