delete stock in portfolio when theres 0 shares

--- a/gos_frontend/styles/StockPage.css
+++ b/gos_frontend/styles/StockPage.css
@@ -175,6 +175,14 @@
   color: white;
 }
 
+.sellButton:hover {
+  background-color: #F55C50;
+}
+
+.buyButton:hover {
+  background-color: #58B75C;
+}
+
 /* Chart container */
 .chartContainer {
   background-color: #17161C;
