--- a/gos_frontend/styles/SignIn.css
+++ b/gos_frontend/styles/SignIn.css
@@ -14,10 +14,13 @@
   margin: 6rem auto 0 auto;
 }
 
+/* title */
 .signInTitle {
   font-size: 3.5rem;
   margin-bottom: 3rem;
 }
+
+/* styles for sign in form and button */
 
 .signInForm {
   display: flex;
@@ -59,6 +62,7 @@
   background-color: #2563eb;
 }
 
+/* styles for error */
 .error {
   background-color: rgba(220, 38, 38, 0.15);
   color: #f87171;
@@ -71,6 +75,8 @@
   text-align: center;
   height: 1.5rem;
 }
+
+/* responsive design */
 
 @media (max-width: 1024px) {
 .signInContainer {
